--- a/app/src/main/res/layout/activity_get.xml
+++ b/app/src/main/res/layout/activity_get.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GetActivity">
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tvData"
@@ -17,7 +14,36 @@
 
             />
 
+<ImageView
+    android:id="@+id/imgPhoto"
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:layout_margin="20dp"
+    />
 
-    </android.support.v4.widget.NestedScrollView>
+<TextView
+    android:id="@+id/tvName"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Name"
+    android:textSize="20sp"
+    android:layout_marginTop="50dp"
+    android:layout_toRightOf="@+id/imgPhoto"
+    />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tvDesc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/imgPhoto"
+            android:layout_below="@+id/tvName"
+            android:text="Desc"
+            android:textSize="20sp"
+            android:layout_marginTop="50dp"
+
+            />
+
+
+
+
+</RelativeLayout>
